Reorganization and changes

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -9,6 +9,16 @@ body {
     font-family: 'Lustria';
     color: white;
 }
+section {
+    p {
+        color: #eee;
+        a {
+            color: #abf;
+            text-decoration: none;
+            font-weight: bold;
+        }
+    }
+}
 footer {
     background-color: RGBA(86,29,29,1);
     color: white;
